--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "element-ui": "^2.15.6",
+    "js-cookie": "^3.0.1",
     "nuxt": "^2.0.0",
     "swiper": "^4.0.7",
     "vue-awesome-swiper": "^3.1.3",
